# micronet

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PROGRESS.md  README.md  idf_component.yml
.github/workflows/: ci.yml  release.yml
arduino/micronet/: README.md  library.properties
arduino/micronet/examples/all_in_one_port_test/: all_in_one_port_test.ino
arduino/micronet/examples/data_test/: data_test.ino
arduino/micronet/examples/identity_test/: identity_test.ino
arduino/micronet/examples/mneta_wrapper_test/: mneta_wrapper_test.ino
arduino/micronet/examples/protocol_test/: protocol_test.ino
arduino/micronet/examples/security_test/: security_test.ino
arduino/micronet/examples/transport_test/: transport_test.ino
arduino/micronet/src/: mcrypt.c  mcrypt.h  mdh.c  mdh.h  mnet_arduino.cpp  mnet_arduino.h  mnet_bundle.h  mnet_contract.h  mnet_data.cpp  mnet_data.h  mnet_identity.cpp  mnet_identity.h  mnet_protocol.cpp  mnet_protocol.h  mnet_transport.cpp  mnet_transport.h  p2p_security.c  p2p_security.h  p2p_security_handshake.c  p2p_security_port.cpp
build_ninja/: CMakeCache.txt
cmake/: MicronetSources.cmake
docs/: 01_transport_block.md  02_security_block.md  03_network_block.md  04_data_block.md  05_protocol_block.md  06_public_api_block.md  API.md  ARCHITECTURE.md  COOKBOOK.md  ESP32.md  GROUPS.md  LAN_MODE.md  QUICK_START.md  SECURITY_MODEL.md  docs_keys_and_hashes.md  docs_repo_structure.md  docs_uart_debug.md  test_report_hw_01.md
examples/arduino_mesh_3nodes/: README.md  arduino_mesh_3nodes.ino  secrets.h.example
examples/arduino_stun_probe/: README.md  arduino_stun_probe.ino  secrets.h.example
examples/esp32_sensor/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.node1.defaults  sdkconfig.node2.defaults  sdkconfig.node3.defaults
examples/esp32_sensor/main/: Kconfig.projbuild  main.c  secrets.h.example
examples/esp32_sensor/tools/: uart_mesh_terminal.py
examples/esp32_stun_probe/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32_stun_probe/main/: Kconfig.projbuild  main.c  secrets.h.example
examples/linux_chat/: CMakeLists.txt  README.md  main.c
hal/: p2p_hal_esp32.c  p2p_hal_linux.c
include/: micronet.h  micronet_debug.h  micronet_limits.h
src/: micronet.c  micronet_debug.c  micronet_internal.h  micronet_parity_guard.c
src/data/: p2p_data.c  p2p_data.h  p2p_data_metrics.c  p2p_data_query.c  p2p_data_vars.c
src/network/: p2p_network.c  p2p_network.h  p2p_network_gossip.c  p2p_network_group.c  p2p_network_sync.c
src/protocol/: p2p_protocol.c  p2p_protocol.h  p2p_protocol_dispatch.c  p2p_protocol_serialize.c
src/security/: p2p_security.c  p2p_security.h  p2p_security_handshake.c  p2p_security_keys.c
src/transport/: p2p_hal.h  p2p_transport.c  p2p_transport.h  p2p_transport_stun.c
tests/: mtest.h  test_api.c  test_arduino_parity.c  test_data.c  test_network.c  test_protocol.c  test_runner.c  test_security.c  test_transport.c
tools/: repo_guard.ps1
tools/MicronetViz/: App.xaml  App.xaml.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  MicronetBridgeClient.cs  Models.cs  README.md
tools/native/: micronet_bridge.c  micronet_bridge.h
